--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
             <h1>Internet deve essere al servizio del "bene Pubblico": 
              <br>il manifesto di Tim Berners-Lee
             </h1>
-            <span> 
-                Scritto da The Booleaner <br>il 10/10/2020
+            <span class="author"> 
+                Scritto da <a href="https://boolean.careers/">The Booleaner</a> <br>il 10/10/2020
             </span>
+        </div>
+        <div>
+            <img src="./img/tim-1.jpg" alt="1st Photo: Tim Berners-Lee">
+            <img src="./img/tim-2.jpg" alt="2nd Photo: Tim Berners-Lee Knight Foundation">
+            <div>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
+            <div>2nd Photo: Wikimedia, by Paul Clarke</div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente at cumque sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente at cumque sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente at cumque sunt distinctio inventore saepe iure nam dolore perspiciatis! Repellendus rerum possimus quaerat quisquam impedit, facere ut. Velit, fuga? Laudantium?
+            </p>
         </div>
     </main>
     <footer>
