--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div>2nd Photo: Wikimedia, by Paul Clarke</div>    
         </div>
         <div>
-            <p>
+            <p class="maintext">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente at cumque sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="highlightedYellow"> Sapiente at cumque sunt Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>Sapiente at cumque sunt distinctio inventore saepe iure nam dolore perspiciatis! <br> Repellendus rerum possimus quaerat quisquam impedit, facere ut. Velit, fuga? Laudantium?
             </p>
             <ul>
